@@ -262,8 +262,8 @@ unsigned char sys_nucode_util_spin[] = {
   0x3e, 0x3e, 0x32, 0x34, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x71,
   0x75, 0x69, 0x74, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x69, 0x66, 0x20, 0x74,
   0x69, 0x6d, 0x65, 0x6f, 0x75, 0x74, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x20,
-  0x20, 0x69, 0x66, 0x20, 0x5f, 0x67, 0x65, 0x74, 0x63, 0x6e, 0x74, 0x28,
-  0x29, 0x20, 0x2d, 0x20, 0x65, 0x6e, 0x64, 0x74, 0x69, 0x6d, 0x65, 0x20,
+  0x20, 0x69, 0x66, 0x20, 0x65, 0x6e, 0x64, 0x74, 0x69, 0x6d, 0x65, 0x20,
+  0x2d, 0x20, 0x5f, 0x67, 0x65, 0x74, 0x63, 0x6e, 0x74, 0x28, 0x29, 0x20,
   0x3c, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20,
   0x71, 0x75, 0x69, 0x74, 0x0a, 0x0a, 0x27, 0x27, 0x0a, 0x27, 0x27, 0x20,
   0x6d, 0x65, 0x6d, 0x73, 0x65, 0x74, 0x2f, 0x6d, 0x65, 0x6d, 0x6d, 0x6f,
