@@ -233,9 +233,9 @@ unsigned char sys_p1_code_spin[] = {
   0x20, 0x20, 0x20, 0x69, 0x66, 0x20, 0x69, 0x6e, 0x61, 0x5b, 0x5f, 0x72,
   0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3d, 0x3d, 0x20, 0x30, 0x0a, 0x20,
   0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x71, 0x75, 0x69, 0x74, 0x0a,
-  0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x69, 0x66, 0x20, 0x77, 0x61, 0x69,
-  0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x20, 0x2d, 0x20, 0x63, 0x6e,
-  0x74, 0x20, 0x3c, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20,
+  0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x69, 0x66, 0x20, 0x63, 0x6e, 0x74,
+  0x20, 0x2d, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65,
+  0x73, 0x20, 0x3c, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20,
   0x20, 0x20, 0x72, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x2d, 0x31, 0x0a,
   0x20, 0x20, 0x65, 0x6c, 0x73, 0x65, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x72,
   0x65, 0x70, 0x65, 0x61, 0x74, 0x20, 0x75, 0x6e, 0x74, 0x69, 0x6c, 0x20,
