@@ -386,8 +386,8 @@ unsigned char sys_p2_code_spin[] = {
   0x65, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d,
   0x0a, 0x20, 0x20, 0x75, 0x6e, 0x74, 0x69, 0x6c, 0x20, 0x7a, 0x20, 0x6f,
   0x72, 0x20, 0x28, 0x74, 0x69, 0x6d, 0x65, 0x6f, 0x75, 0x74, 0x20, 0x61,
-  0x6e, 0x64, 0x20, 0x28, 0x5f, 0x67, 0x65, 0x74, 0x63, 0x6e, 0x74, 0x28,
-  0x29, 0x20, 0x2d, 0x20, 0x65, 0x6e, 0x64, 0x74, 0x69, 0x6d, 0x65, 0x20,
+  0x6e, 0x64, 0x20, 0x28, 0x65, 0x6e, 0x64, 0x74, 0x69, 0x6d, 0x65, 0x20,
+  0x2d, 0x20, 0x5f, 0x67, 0x65, 0x74, 0x63, 0x6e, 0x74, 0x28, 0x29, 0x20,
   0x3c, 0x20, 0x30, 0x29, 0x29, 0x0a, 0x20, 0x20, 0x69, 0x66, 0x20, 0x7a,
   0x0a, 0x20, 0x20, 0x20, 0x20, 0x72, 0x78, 0x62, 0x79, 0x74, 0x65, 0x20,
   0x3a, 0x3d, 0x20, 0x74, 0x65, 0x6d, 0x70, 0x32, 0x20, 0x26, 0x20, 0x24,
