@@ -6,6 +6,7 @@ Version 6.4.0
 - Fixed some quirks in the space/tab warning code
 - Fixed incorrect expansion of field[ptr][n]~~
 - Fixed an incompatibility between _tx and debug()
+- Fixed timeout in _rxraw() (test was wrong way around)
 - Improved range of sin and cos functions
 - Improved performance of flash access in littlefs (thanks, Evan!)
 - Updated -gbrk code to most recent from Chip, and add support for brk #0 interactive debug (thanks, Ada!)
